// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`.toFailWith reports details correctly on a failure due to a success result: toFailTestAndMatchSnapshot 1`] = `
"expect(received).toFailWith(expected)
Expected:
  Failure with \\"hello\\"
Received:
  Success with \\"hello\\""
`;

exports[`.toFailWith reports details correctly on a failure due to non-matching failure value: toFailTestAndMatchSnapshot 1`] = `
"expect(received).toFailWith(expected)
Expected:
  Failure with \\"error\\"
Received:
  Failure with \\"oops\\""
`;

exports[`.toFailWith reports details correctly on a failure with a .not: toFailTestAndMatchSnapshot 1`] = `
"expect(received).not.toFailWith(expected)
Expected:
  Not failure with \\"oops\\"
Received:
  Failure with \\"oops\\""
`;
